--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,17 @@ cmake_minimum_required(VERSION 2.8)
 add_definitions("-std=c++11 -g")
 set(BIN_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_SYSTEM_PROCESSOR}/${CMAKE_SYSTEM}/${CMAKE_CXX_COMPILER_ID}/ )
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_PATH})
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/srclib)
 
+#libraries
+
+set( LIB_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/srclib)
+FILE(GLOB children RELATIVE ${LIB_SRC_DIR} ${LIB_SRC_DIR}/*)
+FOREACH(child ${children})
+    IF(IS_DIRECTORY ${LIB_SRC_DIR}/${child})
+        add_subdirectory ( ${LIB_SRC_DIR}/${child} )
+    ENDIF()
+ENDFOREACH()
 
 # Modules
 
