First commit (after a long time)

--- a/Modules/PermanantData/CMakeLists.txt
+++ b/Modules/PermanantData/CMakeLists.txt
@@ -1,4 +1,5 @@
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_PATH})
+set(CMAKE_BUILD_FILES_DIRECTORY ${OBJ_PATH} )
+
 file(GLOB_RECURSE MOD_SRC_LIST *.h *.cpp)
 
 add_library(${child} SHARED ${MOD_SRC_LIST} )
