--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,11 @@ project(LastEngine)
 cmake_minimum_required(VERSION 2.8)
 SET( CMAKE_CXX_FLAGS  ${CMAKE_CXX_FLAGS} "-std=c++11" )
 set(BIN_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_SYSTEM_PROCESSOR}/${CMAKE_SYSTEM}/${CMAKE_CXX_COMPILER_ID}/ )
+set(BULD_PATH ${CMAKE_CURRENT_SOURCE_DIR}/build/${CMAKE_SYSTEM_PROCESSOR}/${CMAKE_SYSTEM}/${CMAKE_CXX_COMPILER_ID}/ )
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_PATH})
+
+# TODO : CMake must put all his files in build directory
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/srclib)
 
 # custom targets
