--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,31 +1,13 @@
-# http://www.tutorialspoint.com/sqlite/sqlite_c_cpp.htm
-# http://www.adp-gmbh.ch/sqlite/bind_insert.html
-# http://truc2geek.wordpress.com/2012/04/24/sqlite-part-3-creer-une-vue-modes-daffichage/
 project(LastEngine)
 cmake_minimum_required(VERSION 2.8)
-SET( CMAKE_CXX_FLAGS  ${CMAKE_CXX_FLAGS} "-std=c++11" )
-set(BIN_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_SYSTEM_PROCESSOR}/${CMAKE_SYSTEM}/${CMAKE_CXX_COMPILER_ID}/ )
-set(BULD_PATH ${CMAKE_CURRENT_SOURCE_DIR}/build/${CMAKE_SYSTEM_PROCESSOR}/${CMAKE_SYSTEM}/${CMAKE_CXX_COMPILER_ID}/ )
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_PATH})
+set( CMAKE_CXX_FLAGS  ${CMAKE_CXX_FLAGS} "-std=c++11" )
+set(BIN_PATH "/tmp/${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_SYSTEM_PROCESSOR}/${CMAKE_SYSTEM}/${CMAKE_CXX_COMPILER_ID}/" ) # /tmp because of a bug in my computer, remove it.
+set(BUILD_PATH "${CMAKE_CURRENT_SOURCE_DIR}/build/${CMAKE_SYSTEM_PROCESSOR}/${CMAKE_SYSTEM}/${CMAKE_CXX_COMPILER_ID}/" )
+set(CMAKE_CACHEFILE_DIR ${BUILD_PATH})
 
-# TODO : CMake must put all his files in build directory
-
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/srclib)
-
-# custom targets
-add_custom_target(Doxygen COMMAND doxygen WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/doc)
-
-#libraries
-
-set( LIB_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/srclib)
-FILE(GLOB children RELATIVE ${LIB_SRC_DIR} ${LIB_SRC_DIR}/*)
-FOREACH(child ${children})
-    IF(IS_DIRECTORY ${LIB_SRC_DIR}/${child})
-        add_subdirectory ( ${LIB_SRC_DIR}/${child} )
-    ENDIF()
-ENDFOREACH()
 
 # Modules
+# TODO remove
 
 set( MODULE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Modules)
 FILE(GLOB children RELATIVE ${MODULE_DIR} ${MODULE_DIR}/*)
