--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,22 +5,23 @@ set(BIN_PATH "/tmp/${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_SYSTEM_PROCESSOR}/${C
 set(BUILD_PATH "${CMAKE_CURRENT_SOURCE_DIR}/build/${CMAKE_SYSTEM_PROCESSOR}/${CMAKE_SYSTEM}/${CMAKE_CXX_COMPILER_ID}/" )
 set(CMAKE_CACHEFILE_DIR ${BUILD_PATH})
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_PATH})
 
 # Modules
 # TODO remove
 
-set( MODULE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Modules)
-FILE(GLOB children RELATIVE ${MODULE_DIR} ${MODULE_DIR}/*)
-FOREACH(child ${children})
-    IF(IS_DIRECTORY ${MODULE_DIR}/${child})
-        IF( EXISTS ${MODULE_DIR}/${child}/CMakeLists.txt )
-            add_subdirectory ( ${MODULE_DIR}/${child} )
-        ELSE()
-            file(GLOB_RECURSE MOD_SRC_LIST Modules/${child}/*.h Modules/${child}/*.cpp)
-            add_library(${child} SHARED ${MOD_SRC_LIST} )
-        ENDIF()
-    ENDIF()
-ENDFOREACH()
+#set( MODULE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Modules)
+#FILE(GLOB children RELATIVE ${MODULE_DIR} ${MODULE_DIR}/*)
+#FOREACH(child ${children})
+#    IF(IS_DIRECTORY ${MODULE_DIR}/${child})
+#        IF( EXISTS ${MODULE_DIR}/${child}/CMakeLists.txt )
+#            add_subdirectory ( ${MODULE_DIR}/${child} )
+#        ELSE()
+#            file(GLOB_RECURSE MOD_SRC_LIST Modules/${child}/*.h Modules/${child}/*.cpp)
+#            add_library(${child} SHARED ${MOD_SRC_LIST} )
+#        ENDIF()
+#    ENDIF()
+#ENDFOREACH()
 
 # Kernel
 
@@ -33,3 +34,7 @@ add_executable(${PROJECT_NAME}
                ${UML_FILES}
                ${OTHERS_FILES}
                )
+
+if( ${UNIX} )
+    target_link_libraries(${PROJECT_NAME} dl)
+endif()
