init@lastTeam.lem is default init.lem

--- a/Modules/init@LastTeam/CMakeLists.txt
+++ b/Modules/init@LastTeam/CMakeLists.txt
@@ -7,5 +7,10 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BIN_PATH}Modules/enabled)
 include_directories("../../Interfaces")
 
 file(GLOB_RECURSE MOD_SRC_LIST *.h *.cpp)
-add_library(${project} MODULE ${MOD_SRC_LIST})
-set_target_properties(${project} PROPERTIES PREFIX "" SUFFIX ".lem")
+add_library(${PROJECT_NAME} MODULE ${MOD_SRC_LIST})
+set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".lem")
+
+# use it as default init.lem module.
+add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/${PROJECT_NAME}.lem" "${BIN_PATH}/init.lem"
+)
