--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(LastEngine)
 cmake_minimum_required(VERSION 2.8)
-set( CMAKE_CXX_FLAGS  ${CMAKE_CXX_FLAGS} "-std=c++11" )
+set( CMAKE_CXX_FLAGS  ${CMAKE_CXX_FLAGS} "-std=c++11 -rdynamic" )
 set(BIN_PATH "/tmp/${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_SYSTEM_PROCESSOR}/${CMAKE_SYSTEM}/${CMAKE_CXX_COMPILER_ID}/" ) # /tmp because of a bug in my computer, remove it.
 set(BUILD_PATH "${CMAKE_CURRENT_SOURCE_DIR}/build/${CMAKE_SYSTEM_PROCESSOR}/${CMAKE_SYSTEM}/${CMAKE_CXX_COMPILER_ID}/" )
 set(CMAKE_CACHEFILE_DIR ${BUILD_PATH})
